tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_statement_trailing_extern.objc3
module MisplacedQualifierStatementTrailingExtern;

fn main() -> i32 {
  let lhs = 1;
  extern let rhs = 2;
  return lhs;
}